# Akoenet

./: .env.example  .gitignore  AkoNet  LICENSE  PRIVACIDAD.md  PROTECCION_LEGAL.md  README.en.md  README.es.md  README.md  TERMINOS_Y_CONDICIONES.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  publish-tauri-windows.yml
backend/: .env.example  Dockerfile  eslint.config.cjs  package-lock.json  package.json
backend/db/: init.sql
backend/migrations/: 1733000000000_init_akonet_schema.js  1733000001000_add_admin_user_and_flag.js  1733000002000_add_server_invites.js  1733000003000_add_server_emojis.js  1733000004000_add_message_pinning.js  1733000005000_add_message_reactions_and_audit_logs.js  1733000006000_add_user_profile_settings.js  1733000007000_add_user_presence_status.js  1733000008000_add_private_channels.js  1733000010000_add_twitch_username.js  (+23 more)
deploy/: Caddyfile.example
docs/: ADMIN_DASHBOARD.md  BRIEFING_ASESORIA_LEGAL.md  ESTRUCTURA_PUBLICA_SANITIZADA.md  ESTRUCTURA_Y_FUNCIONAMIENTO.md  GUIA_PUBLICA.md  PRODUCCION.md  README.en.md  README.es.md  README.md  RETENCION_DATOS.md
frontend/: .env.development.example  .env.example  .gitignore  DESKTOP.md  README.md  capacitor.config.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src-tauri/: 2  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: desktop.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: backup-all.sh  backup-db.sh  backup-uploads.sh  rename-project-folder-AkoeNet.ps1
(+184 files in other folders)
